# telegram-bot-templates

./: .gitignore  README.md  pyproject.toml
python_telegram_bot/: main.py
python_telegram_bot/handlers/: caps.py  echo.py  inline_query.py  payment.py  start.py  unknown.py
python_telegram_bot/keyboadrs/: inline_logic_steps.py  inline_simple.py
telegrinder_bot/: dispatch.py  main.py
telegrinder_bot/handlers/: api_examples.py  callbacks.py  echo.py  handle_keyboard.py  menu.py  ping.py  start.py
telegrinder_bot/keyboards/: menu.py
